#168 Translate TS CodeCompletionCore to Java
Signed-off-by: vityaman <vityaman.dev@yandex.ru>